Subindo app no heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn
 alabaster==0.7.12
 asn1crypto==0.24.0
 astroid==2.1.0
@@ -13,7 +14,6 @@ bleach==3.0.2
 bokeh==1.0.2
 boto==2.49.0
 Bottleneck==1.2.1
-
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
