--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,6 @@ pycodestyle==2.4.0
 pycosat==0.6.3
 pycparser==2.19
 pycrypto==2.6.1
-pycurl==7.43.0.2
 pyflakes==2.0.0
 Pygments==2.3.1
 pylint==2.2.2
@@ -122,4 +121,4 @@ toolz==0.9.0
 tqdm==4.28.1
 whitenoise==4.1.4
 django-heroku==0.3.1
-django-adminlte3=0.0.7
+django-adminlte3==0.0.7
